--- a/css/todo.css
+++ b/css/todo.css
@@ -1,84 +1,102 @@
 body,
 body * {
-margin: 0;
-padding: 0;
-vertical-align: top;
-box-sizing: border-box;
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-word-break: break-all;
+    margin: 0;
+    padding: 0;
+    vertical-align: top;
+    box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 body {
-    background-color: rgb(204, 204, 204);
+    background-color: #f5f5f5;
 }
 
 .container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-areas: "form" ".";
+    grid-template-areas: 
+        "newTodo"
+        ".";
     width: 100%;
     padding: 20px;
-    row-gap: 20px;
-    column-gap: 40px;
+    gap: 15px 40px;
 }
     .container > .form {
         display: inline-block;
-        grid-area: form;
+        grid-area: newTodo;
         background-color: yellow;
     }
-        .container > .item {
-            
+    .container > .item {
+        display: inline-block;
+        padding: 20px 20px 10px;
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0 2px 8px #0005;
+        position: relative;
+    }
+        .container > .item > .status {
             display: inline-block;
-            background-color: teal;
-            box-shadow: 0 2px 8px gray;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 50px;
+            height: 10px;
+            background-color: #ccc;
+        }
+            .container > .item > .status.todo {
+                background-color: yellow;
+            }
+            .container > .item > .status.in-progress {
+                background-color: #36f;
+            }
+            .container > .item > .status.done {
+                background-color: #0f3;
+            }
+        .container > .item > .description {
+            display: inline-block;
+            width: 100%;
+            font-size: 22px;
+            line-height: 26px;
         }
         .container > .item > .deadline {
-            
             display: inline-block;
-            background-color: teal;
-            box-shadow: 0 2px 8px gray;
-        }
-        .container > .item > .status{
-            
-            display: inline-block;
-            background-color: teal;
-            box-shadow: 0 2px 8px gray;
-            width: 50px;
-        }
-        .container > .item > .status.todo{
-            
-            background-color: greenyellow;
-        }
-        .container > .item > .status.in-progress{
-            
-            background-color: #cdd8bd;
-        }
-        .container > .item > .status.done{
-            
-            background-color: rgb(72, 112, 12);
-        }
-        .container > .item > .description{
-            
-            display: inline-block;
-            background-color: teal;
             width: 100%;
-            font-size: 20px;
         }
+        .container > .item > .actions {
+            display: inline-block;
+            width: 100%;
+        }
+            .item > .actions > .action {
+                display: inline-block;
+                margin: 10px 10px 0 0;
+                color: #36f;
+                font-size: 14px;
+                line-height: 20px;
+                text-decoration: underline;
+                cursor: pointer;
+            }
 
 @media ( min-width: 500px ) {
     .container {
         grid-template-columns: 1fr 1fr;
-        grid-template-areas: "form form" ". .";
+        grid-template-areas: 
+            "newTodo newTodo"
+            ". .";
     }
 }
-@media ( min-width: 800px ) {
+@media ( min-width: 900px ) {
     .container {
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-areas: "form form form" ". . .";
+        grid-template-areas: 
+            "newTodo newTodo newTodo"
+            ". . .";
     }
 }
 @media ( min-width: 1300px ) {
     .container {
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-areas: "form form form form" ". . . .";
+        grid-template-areas: 
+            "newTodo newTodo newTodo newTodo"
+            ". . . .";
     }
 }
