--- a/css/todo.css
+++ b/css/todo.css
@@ -15,17 +15,79 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-areas: 
+        "globalActions"
         "newTodo"
         ".";
     width: 100%;
     padding: 20px;
-    gap: 15px 40px;
+    gap: 25px 40px;
 }
+    .container > .global-actions {
+        display: inline-block;
+        grid-area: globalActions;
+    }
     .container > .form {
         display: inline-block;
         grid-area: newTodo;
-
     }
+        .container > .form > fieldset {
+            display: inline-block;
+            width: 100%;
+            margin-bottom: 15px;
+            border: none;
+        }
+            .form > fieldset > label {
+                display: inline-block;
+                width: 100%;
+            }
+            .form > fieldset > textarea {
+                display: inline-block;
+                width: 100%;
+                min-height: 95px;
+                height: 95px;
+                max-height: 270px;
+                padding: 10px;
+                line-height: 25px;
+                font-size: 20px;
+                resize: vertical;
+            }
+            .form > fieldset > input {
+                display: inline-block;
+                width: 100%;
+                padding: 10px;
+                line-height: 25px;
+                font-size: 20px;
+            }
+        .container > .form > .actions {
+            display: inline-block;
+            width: 100%;
+        }
+            .form > .actions > .btn {
+                display: inline-block;
+                padding: 10px 15px;
+                margin-right: 20px;
+                border: 1px solid #ccc;
+                background-color: #36f;
+                border-radius: 4px;
+                color: #fff;
+                line-height: 20px;
+                font-size: 18px;
+                cursor: pointer;
+            }
+                .form > .actions > .btn:hover {
+                    display: inline-block;
+                    box-shadow: 0 2px 8px #0005;
+                }
+                .form > .actions > .btn.add {
+                }
+                    .form > .actions > .btn.add:hover {
+                    }
+                .form > .actions > .btn.clear {
+                    background-color: #ccc;
+                    color: #000;
+                }
+                    .form > .actions > .btn.clear:hover {
+                    }
     .container > .item {
         display: inline-block;
         padding: 20px 20px 10px;
@@ -80,6 +142,7 @@ body {
     .container {
         grid-template-columns: 1fr 1fr;
         grid-template-areas: 
+            "globalActions globalActions"
             "newTodo newTodo"
             ". .";
     }
@@ -88,6 +151,7 @@ body {
     .container {
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-areas: 
+        "globalActions globalActions globalActions"
             "newTodo newTodo newTodo"
             ". . .";
     }
@@ -96,6 +160,7 @@ body {
     .container {
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-areas: 
+        "globalActions globalActions globalActions globalActions"
             "newTodo newTodo newTodo newTodo"
             ". . . .";
     }
